# schnitzel-machine

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/core/: core.h  core.hh  window.h  window.hh
include/core/Vulkan/: VulkanCommand.h  VulkanCommand.hh  VulkanContext.h  VulkanContext.hh  VulkanFramebuffer.h  VulkanFramebuffer.hh  VulkanManager.h  VulkanManager.hh  VulkanPipeline.h  VulkanPipeline.hh  VulkanRenderPass.h  VulkanRenderPass.hh  VulkanSwapchain.h  VulkanSwapchain.hh
include/core/Vulkan/builders/: CommandBuilder.h  CommandBuilder.hh  DeviceBuilder.h  DeviceBuilder.hh  FramebufferBuilder.h  FramebufferBuilder.hh  InstanceBuilder.h  InstanceBuilder.hh  PipelineBuilder.h  PipelineBuilder.hh  RenderPassBuilder.h  RenderPassBuilder.hh  SurfaceBuilder.h  SurfaceBuilder.hh  SwapchainBuilder.h  SwapchainBuilder.hh
include/utils/: DebugUtils.h  DebugUtils.hh  QueueFamilyIndices.h  QueueFamilyIndices.hh  SwapchainSupportDetails.h  SwapchainSupportDetails.hh  SyncObjectsUtils.h  SyncObjectsUtils.hh
resource/: shader.vert
source/: main.cc
source/core/: core.cc  core.hh  window.cc
source/core/Vulkan/: VulkanContext.cc  VulkanDevice.cc  VulkanDevice.hh  VulkanInstance.cc  VulkanInstance.hh  VulkanManager.cc  VulkanManager.hh  VulkanPhysicalDevice.cc  VulkanPhysicalDevice.hh  VulkanWindowSurface.cc  VulkanWindowSurface.hh
source/core/Vulkan/builders/: CommandBuilder.cc  DeviceBuilder.cc  FramebufferBuilder.cc  InstanceBuilder.cc  PipelineBuilder.cc  RenderPassBuilder.cc  SurfaceBuilder.cc  (+2 more)
source/utils/: DebugUtils.hh  VulkanUtils.hh
